@@ -3,6 +3,8 @@ pypet 0.1b.7
 *   StreamToLogger has moved to the pypetlogging.py module. The mplogging module was
     deleted.
 
+*   The Network Manager now accepts custom Network Constructor
+
 pypet 0.1b.6
 
 *   The storage service prints status updates for loading and storing trees
